--- a/style.css
+++ b/style.css
@@ -1,3 +1,155 @@
 body{
     border: 5px solid wheat;
 }
+
+/* FUENTE DE LOS ICONOS */
+@font-face {
+    font-family: 'icomoon';
+    src:  url('fonts/icomoon.eot?tspgsl');
+    src:  url('fonts/icomoon.eot?tspgsl#iefix') format('embedded-opentype'),
+      url('fonts/icomoon.ttf?tspgsl') format('truetype'),
+      url('fonts/icomoon.woff?tspgsl') format('woff'),
+      url('fonts/icomoon.svg?tspgsl#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+/* DECLARACIÓN DE ICONOS */
+
+.icon-menu-left:before {
+    content: "\e800";
+}
+.icon-search:before {
+    content: "\e886";
+}
+.icon-video_call:before {
+    content: "\e903";
+}
+.icon-bell:before {
+    content: "\e906";
+}
+.icon-home:before {
+    content: "\e909";
+}
+.icon-fire:before {
+    content: "\e908";
+}
+.icon-youtube-play:before {
+    content: "\e90a";
+}
+.icon-video_library:before {
+    content: "\e905";
+}
+.icon-clock2:before {
+    content: "\e94f";
+}
+.icon-feed:before {
+    content: "\e91d";
+}
+.icon-cog:before {
+    content: "\e994";
+}
+.icon-flag:before {
+    content: "\e9cc";
+}
+.icon-help:before {
+    content: "\e902";
+}
+.icon-message-square:before {
+    content: "\e805";
+}
+.icon-film:before {
+    content: "\e913";
+}
+.icon-youtube:before {
+    content: "\e900";
+    color: #f00;
+}
+.icon-more-vertical:before {
+    content: "\e90b";
+}
+.icon-user-square:before {
+    content: "\e856";
+}
+.icon-currency-dollar:before {
+    content: "\e90c";
+}
+.icon-exit_to_app:before {
+    content: "\e901";
+}
+.icon-language:before {
+    content: "\e803";
+}
+.icon-sphere:before {
+    content: "\e9c9";
+}
+.icon-playlist_play:before {
+    content: "\e904";
+}
+.icon-playlist_add:before {
+    content: "\e907";
+}
+.icon-blocked:before {
+    content: "\ea0e";
+}
+
+
+.icon-remove_circle_outline:before {
+    content: "\e801";
+}
+
+
+
+.icon-stack:before {
+    content: "\e82e";
+}
+/* ICONOS QUE FALTAN
+    suscriptiones-
+    historial-
+    tus videos-
+    tus peliculas-
+    mostrar mas-
+    explorar canales-
+    videojuegos-
+    aprendizaje-
+    icon-apps-
+    ocultal-
+    aspecto
+    teclado
+*/
+
+
+
+
+
+/* .icon-user-solid-circle:before {
+    content: "\e804";
+}
+.icon-menu:before {
+    content: "\e800";
+}
+.icon-remove_circle:before {
+    content: "\e802";
+}
+.icon-clock:before {
+    content: "\e94e";
+} */
+  
+
+  
