--- a/media.css
+++ b/media.css
@@ -1,3 +1,8 @@
-@media screen and (max-widht:656){
-
+@media screen and (max-width: 656px){
+    .search-bar{
+        display: none;
+    }
+    .icon-menu-righ.icon-search{
+        display: block;
+    }
 }
