--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
 
 /* DECLARACIÓN DE ICONOS */
 
-.icon-menu-left-burguer:before {
+.icon-menu-left-burger:before {
     content: "\e800";
 }
 .icon-search:before {
@@ -160,7 +160,7 @@ body{
     align-items: center;
 }
 
-.icon-menu-left-burguer{
+.icon-menu-left-burger{
     margin-right: 30px;
     line-height: 56px;
     font-size: 16px;
@@ -248,6 +248,10 @@ body{
     height: 100vh;
 }
 
+.menu-left-small.change{
+    display: none;
+}
+
 .left-small-item{
     text-decoration: none;
     color: #606060;
@@ -277,6 +281,10 @@ body{
     text-align: center;
     height: 93vh;
     overflow: scroll;
+}
+
+.menu-left.change{
+    display: block;
 }
 
 .menu-left-item{
