--- a/style.css
+++ b/style.css
@@ -426,13 +426,43 @@ body{
 
 /* MENU APPS */
 .menu-apps{
+    display: none;   /*menu oculto*/
     right: 139px;
     width: 245px;
+    height: 250px;
 }
 
+.menu-apps-item{
+    display: grid;
+    grid-template-columns: 57px 188px;
+    align-items: center;
+    text-decoration: none;
+    color: #383838;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+}
 
+.icon-menu-apps{
+    justify-self: center;
+    font-size: 22px;
+}
 
+.menu-apps-item p{
+    font-size: 14px;
+    margin: 12px 0;
+}   
 
+.menu-apps-item:nth-of-type(1){
+    border-bottom: 1px solid #dfdfdf;
+    margin: 9px 0 8px;
+    padding-bottom: 8px;
+}
+
+.menu-apps-item:nth-of-type(3){
+    border-bottom: 1px solid #dfdfdf;
+    margin-bottom: 8px;
+    padding-bottom: 8px;
+}
 
 .menu-notifications{
     right: 85px;
