--- a/style.css
+++ b/style.css
@@ -1003,7 +1003,8 @@ body{
 .account-options-item:hover,
 .config-global-item:hover,
 .restrict:hover,
-.option-content:hover{
+.option-content:hover,
+.search-button:hover{
     background: #f2f2f2;
 }
 
@@ -1094,6 +1095,7 @@ body{
     }
     .search-bar.search-change{
         position: absolute;
+        width: auto;
         top: 0;
         left: 0;
         height: 32px;
@@ -1114,9 +1116,7 @@ body{
         width: 10%;
         text-align: center;
         line-height: 32px;
-        margin: 12px 0;
-        padding-left: 0;
-        border-left: 1px solid;
+        margin: 12px 35px 12px 0;
     }
 }
 
